fix editor z-index

--- a/client/src/components/features/application/components/workArea/components/list/components/projects/components/tasks/components/task/components/TaskDetails/TaskDetails.scss
+++ b/client/src/components/features/application/components/workArea/components/list/components/projects/components/tasks/components/task/components/TaskDetails/TaskDetails.scss
@@ -10,3 +10,7 @@
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
   outline: 0;
 }
+
+.DraftEditor-editorContainer {
+  z-index: 0;
+}
